variables.RunHalf.scala.error
Erreur de compilation :
RunHalf:3: error: '(' expected but identifier found.
while!(2 * biscuits = caseOrange + 1 ){avance()} 
     ^RunHalf:5: error: illegal start of simple expression
	}
        ^